--- a/components/chat.html
+++ b/components/chat.html
@@ -5,16 +5,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chat</title>
-   <link rel="stylesheet" href=".././assets/css/chat.css" />
+    <link rel="stylesheet" href=".././assets/css/chat.css" />
     <link rel="shortcut icon" href=".././assets/img/logotipo_para_editar-removebg-preview.png">
 </head>
+
 <body>
 
-<header>
-    
-    <nav>
-        <ul>
-                <li><a href=".././pages/components/login.html">Iniciar sesión</a></li>
+    <header>
+
+        <nav>
+            <ul>
+                <li><a href=".././components/login.html">Iniciar sesión</a></li>
                 <li><a href="..//index.html">Inicio</a></li>
                 <li><a href=".././components/foro.html">Foro</a></li>
                 <li><a href="./chat.html">Chat</a></li>
@@ -22,9 +23,9 @@
                 <li><a href=".././components/proyectos.html">Proyectos</a></li>
                 <li><a href=".././components/contacto.html">Contacto</a></li>
                 <li><a href=".././components/sobre.html">Sobre nosotros</a></li>
-        </ul>
-    </nav>
-</header>
+            </ul>
+        </nav>
+    </header>
 
     <div class="barra_estatica">
         <a href="" class="logo"><img src=".././assets/img/logotipo_texto_blanco.png" alt="250" width="200" /></a>
