--- a/components/login.html
+++ b/components/login.html
@@ -16,21 +16,21 @@
     <h1>Dars Academy</h1>
     <nav>
         <ul>
-                <li><a href="./login.html">Iniciar sesión</a></li>
-                <li><a href="..//index.html">Inicio</a></li>
-                <li><a href=".././components/foro.html">Foro</a></li>
-                <li><a href=".././components/chat.html">Chat</a></li>
-                <li><a href=".././components/llamadas.html">Llamadas</a></li>
-                <li><a href=".././components/proyectos.html">Proyectos</a></li>
-                <li><a href=".././components/contacto.html">Contacto</a></li>
-                <li><a href=".././components/sobre.html">Sobre nosotros</a></li>
+            <li><a href="./login.html">Iniciar sesión</a></li>
+            <li><a href="..//index.html">Inicio</a></li>
+            <li><a href=".././components/foro.html">Foro</a></li>
+            <li><a href=".././components/chat.html">Chat</a></li>
+            <li><a href=".././components/llamadas.html">Llamadas</a></li>
+            <li><a href=".././components/proyectos.html">Proyectos</a></li>
+            <li><a href=".././components/contacto.html">Contacto</a></li>
+            <li><a href=".././components/sobre.html">Sobre nosotros</a></li>
         </ul>
     </nav>
 </header>
 
 <body>
     <div class="form-body">
-        <img src="/assets/img/user_icon_143482.jpg" alt="user-login">
+        <img src=".././assets/img/user_icon_143482.jpg" alt="user-login">
         <p class="text">Bienvenido Dars Academy</p>
         <form class="login-form">
             <input type="text" placeholder="Email o nombre de usuario">
